--- a/static/html/header1.html
+++ b/static/html/header1.html
@@ -8,7 +8,7 @@
     <div>
         <a href="/">主页</a>
 
-        <p align="right">{{ username }}</p>
+        <p align="right">已登录，<a href="/logout/">点我退出</a></p>
 </div>
 </body>
 </html>
