--- a/static/html/header1.html
+++ b/static/html/header1.html
@@ -7,8 +7,9 @@
 <body>
     <div>
         <a href="/">主页</a>
+        <a href="/book/">查看书籍</a>
 
         <p align="right">已登录，<a href="/logout/">点我退出</a></p>
-</div>
+    </div>
 </body>
 </html>
