--- a/static/html/header0.html
+++ b/static/html/header0.html
@@ -7,6 +7,7 @@
 <body>
     <div>
         <a href="/">主页</a>
+        <a href="/book/">查看书籍</a>
 
         <p align="right"><a href="/login">登录</a>或<a href="/register/">注册</a></p>
     </div>
