--- a/static/html/header0.html
+++ b/static/html/header0.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <div>
-        <a href="/">主页</a>
-        <a href="/book/">查看书籍</a>
+        <a href="/">主页</a>&emsp;
+        <a href="/book/">查看书籍</a>&emsp;
 
         <p align="right"><a href="/login">登录</a>或<a href="/register/">注册</a></p>
     </div>
