--- a/static/html/header1.html
+++ b/static/html/header1.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <div>
-        <a href="/">主页</a>
-        <a href="/book/">查看书籍</a>
+        <a href="/">主页</a>&emsp;
+        <a href="/book/">查看书籍</a>&emsp;
+        <a href="/person/">个人中心</a>&emsp;
 
         <p align="right">已登录，<a href="/logout/">点我退出</a></p>
     </div>
